# oop_warehouse_model

./: .gitignore  README.md
code/: Actions.h  CMakeLists.txt  Command.h  Models.h  UiDecorator.h  WarehouseStateManager.h  main.cpp
code/logic/: Command.cpp  WarehouseStateManager.cpp
code/model/: Package.cpp  Storage.cpp
code/ui/: UiDecorator.cpp
documentation/: Opis_diagramu_ETAP_II_Karol_Musz.odt
